First_Step/data/44/115/compilation.txt
Scores.java:35: error: bad operand types for binary operator '+'
        result=result+t[i] ;  
                     ^
  first type:  int[]
  second type: int
1 error
